syntax = "proto3";

option java_multiple_files = true;
option java_package = "fruitbox.iam.role";
option java_outer_classname = "RoleProto";

package fruitbox_iam.v1;

import "google/protobuf/field_mask.proto";
import "fruitbox_iam/v1/permission.proto";
import "ultimate_api/v1/ultimate.proto";

service RoleService {
  rpc Create(CreateRoleRequest) returns (RoleReply) {}
  rpc Update(UpdateRoleRequest) returns (RoleReply) {}
  rpc Delete(DeleteRoleRequest) returns (DeleteRoleReply) {}
  rpc AssignPermission(AssignPermissionRequest) returns (RoleReply) {}
  rpc GetRolePermissions(FindRoleRequest) returns (RoleReply) {}
}

message Role {
  int64 id = 1;
  string name = 2;
  string description = 3;
  int64 cid = 4;
  int64 ctime = 5;
  optional int64 mid = 6;
  optional int64 mtime = 7;
}

// 添加用户角色关联请求
message AssignRoleRequest {
  int64 user_id = 1;
  repeated int64 role_ids = 2;
}

// 添加角色权限关联请求
message AssignPermissionRequest {
  int64 role_id = 1;
  repeated int64 permission_ids = 2;
}

message CreateRoleRequest {
  string name = 1;
  string description = 2;
}

message UpdateRoleRequest {
  int64 id = 1;
  optional string name = 2;
  optional string description = 3;
}

message DeleteRoleRequest {
  int64 id = 1;
}

message FindRoleRequest {
  int64 id = 1;
  google.protobuf.FieldMask field_mask = 2;
}

message RoleReply {
  Role role = 1;
  repeated PermissionDto permissions = 2;
}

message DeleteRoleReply {}

